css/style.css
/* FONTS */

@font-face {
    font-family: "Calamity Regular";
    src: url("../fonts/CalamityRegular/CalamityRegular.otf");
}

@font-face {
    font-family: "Calamity Bold";
    src: url("../fonts/CalamityRegular/CalamityBold.otf");
}


/* VARIABLES */

:root {
    --calamity-white: rgb(254, 255, 227);
    --calamity-yellow: rgba(255, 255, 0, 0.87);
    --calamity-dark-gray: rgb(43, 43, 36);
    --calamity-red: #C82F3E;
}


/* GENERAL STYLE */

body {
    min-height: 100vh;
    min-width: 100vw;
    background-color: black;
}

#background-image {
    position: fixed;
    left: 0;
    right: 0;
    z-index: 1;
    display: block;
    background-image: url("../images/background.jpg");
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    -webkit-filter: blur(7px) brightness(0.3);
    -moz-filter: blur(7px) brightness(0.3);
    -o-filter: blur(7px) brightness(0.3);
    -ms-filter: blur(7px) brightness(0.3);
    filter: blur(7px) brightness(0.3);
}

#background-decoration {
    height: 90vh;
    color: #9b9999;
    position: fixed;
    bottom: -10px;
    left: 75%;
}

#wrapper {
    position: relative;
    font-family: Calamity Regular;
    color: var(--calamity-white);
    /* background-color: black; */
    height: 100%;
    min-width: 100%;
    z-index: 2;
}

#navbar {
    display: none;
}

/* HEADER */

header {
    display: flex;
    position: relative;
    justify-content: space-between;
    align-content: center;
    padding: 3em 4em;
}

#heart-gauge {
    display: flex;
}

.heart-gauge__heart {
    width: 1.2em;
    margin-right: 0.2em;
}

#title {
    width: 100%;
    text-align: center;
    position: absolute;
    left: 50%;
    top: 3.5em;
    transform: translateX(-50%);
}

h1 {
    font-family: Calamity Bold;
    font-size: 2em;
    text-align: center;
}

#title > p {
    text-align: center;
    color: var(--calamity-yellow);
    margin-top: 0.5em;
}

#rupees {
    display: flex;
    align-items: center;
}

#rupees > p {
    font-size: 1.1em;
}

.rupees__icon {
    height: 2em;
    margin-right: 0.7em;
}


/* MENU */

main {
    height: 70%;
}

#container {
    display: flex;
    margin: 2em 0 4em 4em;
    padding: 3em 0 3em 3em;
    height: 100%;
    box-shadow: inset 0 0 2px 1px rgba(128, 128, 128, 0.4); /* box shadow for smoother borders */
    clip-path: inset(-5px 3px -5px -5px); /* remove border/shadow on the right side for style purposes */
    border-right: none;
    background-color: rgb(255, 255, 255, 0.04); /* make background a little brighter */
}

menu > li {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: black;
    font-family: Calamity Bold;
    font-size: 1.6em;
    width: 24em;
    height: 2.8em;
    margin-bottom: 0.9em;
    border: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
    border-radius: 2px;
    transition: all 0.3s ease-in-out;
}

menu > li:hover {
    cursor: pointer;
    box-shadow: 0 0 12px 3px rgb(254, 254, 229, 0.5);
    border: 2px solid rgb(254, 254, 229);
    outline: unset;
    animation: glow 3s ease-in-out;
    animation-iteration-count: infinite;
}
@keyframes glow {
    50% {
        border: 2px solid rgba(254, 254, 229, 0.5);
    }
}

.menu__selector {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-color: var(--calamity-dark-gray);
    width: 1.4em;
    height: calc(100% - 4px);
    margin: 2px 2px 2px 0;
}

.menu__selector--inactive {
    background-color: black;
    width: 0.3em;
    height: 0.3em;
    border-radius: 100%;
}

.menu__selector--active {
    background-color: var(--calamity-yellow);
    width: 0.3em;
    height: 0.3em;
    border: 3px solid #2B2B24;
    outline: 2px solid var(--calamity-yellow);
    border-radius: 100%;
    box-shadow: 0 0 0.4em 0.2em var(--calamity-yellow);
}

.menu__selector--active::after {
    position: absolute;
    background-color: transparent;
    border: 1px solid var(--calamity-yellow);
    width: 0.4em;
    height: 0.4em;
    border-radius: 100%;
    margin: auto;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    animation: pulsate 2.5s ease-out;
    animation-iteration-count: infinite;
    opacity: 0.0;
    content: "";
  }
  @keyframes pulsate {
    0% {
      transform: scale(1, 1);
      opacity: 0.0;
    }
    50% {
      opacity: 1.0;
    }
    100% {
      transform: scale(5, 5);
      opacity: 0.0;
    }
  }

.menu__item {
    display: flex;
    justify-content: center;
    padding: 0.5em;
}

.menu__item > img {
    width: 1.5em;
    margin-right: 0.7em;
}

.menu__item p:nth-child(2) {
    font-family: Calamity Regular;
    font-size: 0.6em;
    color: var(--calamity-yellow);
    margin-top: 0.3em;
}

/* CONTENT */

#content {
    width: 100%;
    margin-left: 5em;
    padding: 2em;
    border: solid 2px #414140;
    outline: solid 2px black;
    border-radius: 2px;
    background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.1) 50%);
}

.section__content {
    height: 25em;
    padding-right: 1em;
    padding-top: 0.5em;
    overflow-x: hidden;
    overflow-y: auto;
}

.section__content::-webkit-scrollbar-track
{
	background-color: var(--calamity-dark-gray);
    border-radius: 1px;
    margin-bottom: 4em;
    margin-top: 4em;
}

.section__content::-webkit-scrollbar
{
	width: 0.25em;
	background-color: transparent;
}

.section__content::-webkit-scrollbar-thumb
{
	width: 0.25em;
    background-color: var(--calamity-white);
}

#content > section {
    width: 70%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

#content > section > hr {
    margin-left: 0;
    margin-right: 0;
}

#content h2 {
    font-family: Calamity Bold;
    font-size: 1.5em;
    margin-bottom: 0.3em;
}

section > p {
    font-size: 1em;
    color: var(--calamity-yellow);
    text-align: right;
    margin-bottom: 1.5em;
}

#content__about__text p {
    font-size: 1.1em;
    margin-bottom: 1em;
    line-height: 1.3em;
}

#content__skills__container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.content__skills__item {
    display: flex;
    justify-content: center;
    position: relative;
    align-content: center;
    background-color: black;
    width: 6.5em;
    height: 6.5em;
    border: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
    border-radius: 2px;
    margin: 0 1.1em 1.1em 0;
}

.content__skills__item > img {
    width: 4em;
    margin: 0.5em;
}

.content__skills__item p {
    text-align: center;
    font-size: 0.9em;
    background-color: black;
    border: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
    border-radius: 2px;
    position: absolute;
    bottom: -5px;
    right: -5px;
    padding: 0.2em 0.5em;
    width: fit-content;
}

.content__projects__item {
    position: relative;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    border: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
    border-radius: 2px;
    margin-top: 1em;
    margin-bottom: 4em;
}

.content__projects__item > div {
    display: flex;
}

.content__projects__item > div > a {
    width: 50%;
    border-right: solid 2px var(--calamity-dark-gray);
    border-bottom: solid 2px var(--calamity-dark-gray);
    border-radius: 2px;
}

.content__projects__item > div > a > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.content__projects__item h3 {
    font-family: Calamity Bold;
    color: var(--calamity-white);
    font-size: 1.2em;
    background-color: black;
    border: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
    border-radius: 2px;
    padding: 0.3em 0.5em;
    position: absolute;
    top: -1em; 
    left: 50%;
    transform: translateX(-50%);
}

.content__projects__item__infos {
    margin-top: 1em;
    padding: 0.5em;
}

.content__projects__item__status {
    color: var(--calamity-red);
    margin-bottom: 1em;
}

.content__projects__item__stacks {
    color: var(--calamity-yellow);
}

.content__projects__item__stacks > li {
    font-size: 0.9em;
    margin-bottom: 0.3em;
}

.content__projects__item__description {
    margin: 0.7em;
    line-height: 1.3em;
}

.content__contact__item {
    font-size: 1.1em;
    margin: 1.5em;
}

.content__contact__item > *:first-child {
    display: flex;
    align-items: center;
    transition: 0.3s;
    transform-origin: left;
    
}

.content__contact__item > *:first-child > p {
    width: 90%;
    overflow-wrap: break-word;
}

.content__contact__item > *:first-child > img {
    width: 1.5em;
    margin-right: 0.7em;
}

.content__contact__item > a:hover {
    transform: scale(1.3);
    transform-origin: left;
    text-shadow: 0 0 7px var(--calamity-white);
    transition: 0.2s;
}

/* TABLET LAYOUT */

@media screen and (max-width: 1280px) {

    #background-decoration{
        left: 50%;
    }

    #title {
        top: 6rem;
    }

    #container {
        margin-top: 3rem;
        flex-direction: column;
    }

    menu > li {
        width: 70%;
    }

    #content {
        width: auto;
        margin-left: 0;
        margin-top: 2rem;
    }

    #content > section {
        width: 80%;
    }
}

/* MOBILE LAYOUT */

#navbar {
    position: fixed;
    z-index: 99;
    bottom: 0;
    right: 0;
    left: 0;
    height: 80px;
    background-color: black;
    border-top: solid 2px var(--calamity-dark-gray);
    outline: solid 2px black;
}

#navbar > ul {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-right: 1.2rem;
    padding-left: 1.2rem;
}

.navbar__item {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 0.6em;
    padding: 1rem;
}

.navbar__item--active {
    color: var(--calamity-yellow)
}

.navbar__item--active > p {
    text-shadow: 0 0 5px var(--calamity-yellow);
}

.navbar__item > svg {
    width: 1.3rem;
    height: auto;
}

@media screen and (max-width: 600px) {

    #background-image {  
        -webkit-filter: blur(12px) brightness(0.3);
        -moz-filter: blur(12px) brightness(0.3);
        -o-filter: blur(12px) brightness(0.3);
        -ms-filter: blur(12px) brightness(0.3);
        filter: blur(12px) brightness(0.3);
    }

    #background-decoration{
        height: 500px;
    }

    #navbar {
        display: block;
    }

    #heart-gauge, #rupees {
        display: none;
    }

    menu {
        display: none;
    }

    h1 {
        font-size: 1.8em;
    }

    #title {
        top: 1.6rem;
    }

    #title > p {
        font-size: 1em;
    }
    
    #container {
        clip-path: inset(-5px 3px -5px 3px);
        padding: 2rem 0 2rem 0;
        margin-left: 0;
        margin-top: 0.9rem;
        margin-bottom: 10rem;
    }

    #content {
        font-size: 0.9em;
        margin-top: 0;
        padding: 2rem 1rem 2rem 1rem;
    }

    #content > section {
        width: auto;
        padding: 0 1em 0 1em;
    }

    .section__content {
        height: auto;
        overflow-y: unset;
    }

    .content__skills__item {
        width: 5.8em;
        height: 5.8em;
        margin: 0.5em;
    }
}

/* 2K SCREEN LAYOUT */

@media screen and (min-width: 2500px) {

    header {
        font-size: 1.5em;
    }

    #container {
        font-size: 1.6em;
    }
}

/* 4K SCREEN LAYOUT */

@media screen and (min-width: 3800px) {

    header {
        font-size: 2.1em;
    }

    #container {
        font-size: 2.3em;
    }
}

